# poc-machine-law-vorijk-fieldlab

./: go.work  go.work.sum
machinev2/backend/: go.mod  main.go
machinev2/backend/cmd/: root.go  serve.go
machinev2/backend/handler/: case.go  claim.go  dataframe.go  engine.go  evaluate.go  events.go  handler.go  law.go  profile.go
machinev2/backend/handler/adapter/: case.go  claim.go  evaluate.go  event.go  profile.go  rulespec.go  service.go
machinev2/backend/service/: case.go  claim.go  dataframe.go  evaluate.go  event.go  profile.go  service.go
machinev2/machine/: go.mod
machinev2/machine/casemanager/: event.go  executer.go  logger.go  manager.go  setup.go  transaction.go
machinev2/machine/claimmanager/: claimmanager.go
machinev2/machine/dataframe/: dataframe.go  dataframe_test.go  dataframearrow.go  dataframeccsdf.go
machinev2/machine/logger/: logger_test.go
machinev2/machine/model/: ruleset.go
machinev2/machine/resolver/: resolver.go
machinev2/machine/ruleresolver/: ruleresolver.go  rulespec_test.go
machinev2/machine/service/: service.go
machinev2/machine/serviceresolver/: serviceresolver.go
machinev2/machine_law/: .metadata  README.md  ffigen.yaml  pubspec.yaml
machinev2/machine_law/android/: build.gradle  settings.gradle
machinev2/machine_law/example/: README.md  pubspec.yaml
machinev2/machine_law/lib/: machine_law.dart  machine_law_bindings_generated.dart
machinev2/machine_law/linux/: CMakeLists.txt
machinev2/machine_law/src/: CMakeLists.txt  Makefile  go.mod  go.sum  machine_law.go  machine_law.h
(+41 files in other folders)
